Made nav header fixed, adjusted top margin of .home so the fixed header won't overlap it.

--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,10 @@ p {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  z-index: 9000;
+  position: fixed;
+  top: 0;
 }
 .nav-header h1 {
   font-size: 3.5rem;
@@ -201,6 +205,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 100px;
 }
 .home .intro img {
   border-radius: 5px;
@@ -253,6 +260,7 @@ footer {
     flex-direction: column-reverse;
     width: 100%;
     padding: 15px;
+    margin-top: 20px;
   }
 }
 .home .walk .walk-text {
