--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  margin-top: @nav-height;
 
   .intro {
 
@@ -86,7 +87,7 @@
 
         @media @phone {
           width: 100%;
-          .top-bottom.padding(15px, 15px);
+          .top-bottom-padding(15px, 15px);
         }
 
         &:hover {
