--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,11 +2,15 @@
 
 .nav-header {
     width: 100%;
-    height: 100px;
+    height: @nav-height;
     color: @nav-font;
     background-color: @nav-bg;
     border-bottom: 1px solid @nav-border;
     .flex-container(column, nowrap);
+    overflow: hidden;
+    z-index: 9000;
+    position: fixed;
+    top: 0;
 
     h1 {
         font-size: 3.5rem;
