--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,7 @@
 // Variables
 
+@nav-height: 100px;
+
 // Color pointers
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
